feat: integrate EigenAI client into insurance app with deterministic check

--- a/apps/insurance/.env.example
+++ b/apps/insurance/.env.example
@@ -1,2 +1,6 @@
-# Wallet Configuration
-MNEMONIC="abandon abandon abandon abandon abandon abandon abandon abandon abandon abandon abandon about"
+EIGENAI_API_KEY=your_api_key_here
+EIGENAI_ENV=sepolia
+EIGENAI_MODEL=gpt-oss-120b-f16
+EIGENAI_SEED=42
+EIGENAI_PROMPT=Compute deterministic insurance payouts for a simple one-event claim.
+VERIFY_DETERMINISM=true
