feat: add EigenAI grant flow to insurance app and update lockfile

--- a/apps/insurance/.env.example
+++ b/apps/insurance/.env.example
@@ -4,3 +4,7 @@ EIGENAI_MODEL=gpt-oss-120b-f16
 EIGENAI_SEED=42
 EIGENAI_PROMPT=Compute deterministic insurance payouts for a simple one-event claim.
 VERIFY_DETERMINISM=true
+
+# Grant flow (no API key)
+PRIVATE_KEY=0xyour_private_key_here
+DETERMINAL_SERVER_URL=https://determinal-api.eigenarcade.com
